--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# MacOS
+.DS_Store
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
