--- a/Development_ExportOptions.plist
+++ b/Development_ExportOptions.plist
@@ -18,3 +18,6 @@
 	<string>&lt;none&gt;</string>
 </dict>
 </plist>
+
+<!-- method 可选：app-store、ad-hoc、enterprise、development -->
+<!-- teamID 请修改为 apple开发者账号 的teamID -->
